--- a/Subgal-francja.html
+++ b/Subgal-francja.html
@@ -71,7 +71,7 @@ body{
 
 -->
 
-    <a class="to-home" href="https://njww.github.io">🚩 Strona Główna</a>
+    <a class="to-home" href="https://njwww.github.io">🚩 Strona Główna</a>
 
 <h2 class="g-gal-title">Lazurowe wybrzeże</h2>
 
