--- a/jekyll-blog/404.html
+++ b/jekyll-blog/404.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"><title>404 - NJW BLog</title>
 
 <meta name="description" content="Blog">
-<link rel="canonical" href="http://localhost:4000/jekyll-blog/404.html"><link rel="alternate" type="application/rss+xml" title="NJW BLog" href="/jekyll-blog/"><!-- start favicons snippet, use https://realfavicongenerator.net/ -->
+<link rel="canonical" href="https://njwww.github.io//jekyll-blog/404.html"><link rel="alternate" type="application/rss+xml" title="NJW BLog" href="/jekyll-blog/"><!-- start favicons snippet, use https://realfavicongenerator.net/ -->
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
