Added "back" to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -25,6 +25,7 @@
 
 
 -->
+<a class="to-home" href="https://njwww.github.io">🚩 Strona Główna</a>
 <h2 class="g-gal-title">Galeria</h2>
 <a href="Subgal-francja.html">
     <img src="/Galeria/Lazurowewybrzeze.jpg" class="gallery-cat1">
