--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,7 @@
 -->
 <a class="to-home" href="https://njwww.github.io">🚩 Strona Główna</a>
 <h2 class="g-gal-title">Galeria</h2>
+<div></div>
 <a href="Subgal-francja.html">
     <img src="/Galeria/Lazurowewybrzeze.jpg" class="gallery-cat1">
 </a>
