--- a/Subgal-francja.html
+++ b/Subgal-francja.html
@@ -73,7 +73,7 @@ body{
 
     <a class="to-home" href="https://njwww.github.io">🚩 Strona Główna</a>
 
-<h2 class="g-gal-title">Lazurowe wybrzeże</h2>
+<h2 class="g-gal-title">Lazurowe Wybrzeże</h2>
 
     <img src="/Galeria/Lazurowe/Lazurowe (1).jpeg" class="gallery-cat1">
     <img src="/Galeria/Lazurowe/Lazurowe (2).jpeg" class="gallery-cat1">
