Information about newer version of this site

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <a href="MojaStrona.html" class="color-switch">🌑</a>
         </div>
     -->
+    <p id="designedby">There is a newer version of this site available at <a href="https://njwww.netlify.app/">this link</a></p>
     <p id="designedby">NJW - 2020</p>
 <script>
 </script>
