--- a/sinkhole_landme_page2.html
+++ b/sinkhole_landme_page2.html
@@ -1,1 +1,48 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>I don't like the view</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped&family=Inter:wght@500&family=Oswald:wght@200;400&display=swap" rel="stylesheet">
+<style>
+    .text{
+        font-family: 'IBM Plex Sans Thai Looped', sans-serif;
+        font-family: 'Inter', sans-serif;
+        font-family: 'Oswald', sans-serif;
+        color:lightgrey ;
+        font-size: 300%;
+        margin-left: 25%;
+        margin-right: 25%;
+    }
+    body{
+        background-color: black;
+    }
+    #up{
+        margin-top: 10%;
+    }
+    #who{
+        color: lightgrey;
+        font-family: 'IBM Plex Sans Thai Looped', sans-serif;
+        font-family: 'Inter', sans-serif;
+        font-family: 'Oswald', sans-serif;
+        font-size: 150%;
+        margin-left: 25%;
+        margin-right:25%;
+    }
+
+</style>
+
+
+</head>
+<body>
+    <br>
+    <br>
+    <p class="text">Oh well, don't stop when you get to the basement! Keep straight on! Give my regards to the Earth's core!</p>
+    <a id="who">- Basil Fawlty, Fawlty towers - Episode 7</a>
+</body>
+</html>
