--- a/sinkhole_landme_page.html
+++ b/sinkhole_landme_page.html
@@ -5,12 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I don't like the view</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
 <style>
     .text{
-        font-family: 'IBM Plex Sans Thai Looped', sans-serif;
-        font-family: 'Inter', sans-serif;
-        font-family: 'Oswald', sans-serif;
+        font-family: 'Oswald',
         color:lightgrey ;
         font-size: 300%;
         margin-left: 25%;
@@ -23,10 +20,8 @@
         margin-top: 10%;
     }
     #who{
-        color: lightgrey;
-        font-family: 'IBM Plex Sans Thai Looped', sans-serif;
-        font-family: 'Inter', sans-serif;
-        font-family: 'Oswald', sans-serif;
+        font-family: 'Oswald',
+        color:lightgrey ;
         font-size: 150%;
         margin-left: 25%;
         margin-right:25%;
