--- a/sinkhole_landme_page2.html
+++ b/sinkhole_landme_page2.html
@@ -7,10 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>403</title>
 <style>
-    .text{
-        font-family: 'IBM Plex Sans Thai Looped', sans-serif;
-        font-family: 'Inter', sans-serif;
-        font-family: 'Oswald', sans-serif;
+        .text{
+        font-family: 'Oswald',
         color:lightgrey ;
         font-size: 300%;
         margin-left: 25%;
@@ -23,15 +21,12 @@
         margin-top: 10%;
     }
     #who{
-        color: lightgrey;
-        font-family: 'IBM Plex Sans Thai Looped', sans-serif;
-        font-family: 'Inter', sans-serif;
-        font-family: 'Oswald', sans-serif;
+        font-family: 'Oswald',
+        color:lightgrey ;
         font-size: 150%;
         margin-left: 25%;
         margin-right:25%;
     }
-
 </style>
 
 
