--- a/sinkhole_landme_page2.html
+++ b/sinkhole_landme_page2.html
@@ -8,7 +8,7 @@
     <title>403</title>
 <style>
         .text{
-        font-family: 'Oswald',
+        font-family: 'Oswald';
         color:lightgrey ;
         font-size: 300%;
         margin-left: 25%;
