--- a/sinkhole_landme_page.html
+++ b/sinkhole_landme_page.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I don't like the view</title>
 <style>
-    .text{
-        font-family: 'Oswald',
+        .text{
+        font-family: 'Oswald';
         color:lightgrey ;
         font-size: 300%;
         margin-left: 25%;
@@ -26,7 +26,6 @@
         margin-left: 25%;
         margin-right:25%;
     }
-
 </style>
 
 
