--- a/sinkhole_landme_page.html
+++ b/sinkhole_landme_page.html
@@ -7,8 +7,8 @@
     <title>I don't like the view</title>
 <style>
         .text{
-        font-family: 'Oswald';
-        color:lightgrey ;
+        font-family: Arial, sans-serif;
+        color:white;
         font-size: 300%;
         margin-left: 25%;
         margin-right: 25%;
@@ -20,8 +20,8 @@
         margin-top: 10%;
     }
     #who{
-        font-family: 'Oswald',
-        color:lightgrey ;
+        font-family: Arial, sans-serif;
+        color:white;
         font-size: 150%;
         margin-left: 25%;
         margin-right:25%;
