--- a/sinkhole_landme_page2.html
+++ b/sinkhole_landme_page2.html
@@ -8,8 +8,8 @@
     <title>403</title>
 <style>
         .text{
-        font-family: 'Oswald';
-        color:lightgrey ;
+        font-family: Arial, sans-serif;
+        color:white;
         font-size: 300%;
         margin-left: 25%;
         margin-right: 25%;
@@ -21,8 +21,8 @@
         margin-top: 10%;
     }
     #who{
-        font-family: 'Oswald',
-        color:lightgrey ;
+        font-family: Arial, sans-serif;
+        color:white;
         font-size: 150%;
         margin-left: 25%;
         margin-right:25%;
