--- a/403-light.html
+++ b/403-light.html
@@ -16,6 +16,7 @@
         h1{
             font-size: 80px;
             font-weight: 1000;
+            colour: black;
         }
         mark {
             background-color: #d06826;
